# closest-pair-2d

./: CMakeLists.txt  README.md
source/include/: 2d_problem.h  merge_sort.h  point.h
source/src/: 2d_problem.cpp  main.cpp  merge_sort.cpp
